--- a/src/main/java/interfaces/BuscadorJob.form
+++ b/src/main/java/interfaces/BuscadorJob.form
@@ -29,10 +29,7 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="salir" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="salir" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
                   </Group>
