--- a/src/main/java/interfaces/BuscadorJob.form
+++ b/src/main/java/interfaces/BuscadorJob.form
@@ -83,6 +83,9 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="textPuesto">
+      <Events>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="textPuestoMousePressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
@@ -95,6 +98,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="textLocalidad">
+      <Events>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="textLocalidadMousePressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
